--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             p    {color: red;}
             </style>
         <title>My Personal Webpage</title>
-        <link rel="icon" type="image/x-icon" href="C:\Users\Ramiz\Desktop\ADA University Fall Semester 2024\Web & Mobile 1\Personal Webpage\favicon.ico">
+        <link rel="icon" type="image/x-icon" href=".\favicon.ico">
 
         <strong>My Personal Webpage</strong>
        
@@ -27,7 +27,7 @@
         practical experience gained through an internship at Unibank to contribute effectively to
         dynamic projects within the field.<br>
 
-        <img src="D:\Ranndom downloaded pics\photo_2024-02-02_16-59-28.jpg" alt="transparent" width="200px"> </img>
+        <img src=".\photo_2024-02-02_16-59-28.jpg" alt="transparent" width="200px"> </img>
 <style>
     img {
         display: block;
