--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         practical experience gained through an internship at Unibank to contribute effectively to
         dynamic projects within the field.<br>
 
-        <img src=".\photo_2024-02-02_16-59-28.jpg" alt="transparent" width="200px"> </img>
+        <img src=".\pic-of-me.jpg" alt="My Picture" width="200px"> </img>
 <style>
     img {
         display: block;
