--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <strong>My Personal Webpage</strong>
        <a href=".\skills.html">TECHNICAL SKILLS</a>
-       <a href=".\languages.html">LANGUAGES</a>
+       <a href=".\languages.html">CERTIFICATION</a>
         </head>
          <br>  <hr>
         <h1 align="center">Ramiz Taghiyev</h1>
