--- a/languages.html
+++ b/languages.html
@@ -7,7 +7,9 @@
 
 <br><hr>
 <h1 align="center">CERTIFICATION </h1>
-<ol>
+<ol style="color:rgb(255, 255, 255);">
+
+
 <li>Barattson (School of Business and Finances)
     <br>[General English intermediate certificate]</li>
 <li>Kangaroo 2019 International Mathematics Competition in
