--- a/skills.html
+++ b/skills.html
@@ -8,7 +8,7 @@
         
 <h1 align="center">TECHNICAL SKILLS</h1>
 
-<ul>
+<ul style="color:rgb(255, 255, 255);">
     <li>Intermediate proficiency in several programming languages: C, C++, Java, Python, SQL</li>
         <li>Basic proficiency in networking software: Cisco Packet Tracer</li>
             <li>Basic proficiency in markup languages: HTML, CSS</li>
@@ -21,7 +21,7 @@
 
 <hr>  
 <h1 align="center"> SOFT SKILLS </h1>
-<ol>
+<ol style="color:rgb(255, 255, 255);">
 
    <li> Time Management
        <li>Leadership Skills</li> 
