--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
         <link rel="icon" type="image/x-icon" href=".\favicon.ico">
 
         <strong>My Personal Webpage</strong>
-       <a href=".\skills.html">TECHNICAL SKILLS</a>
+       <a href=".\skills.html">SKILLS</a>
        <a href=".\languages.html">CERTIFICATION</a>
+       <a href=".\schedule.html">SCHEDULE</a>
+       <a href=".\contact-me.html">CONTACT ME</a>
+
+
         </head>
          <br>  <hr>
         <h1 align="center">Ramiz Taghiyev</h1>
