--- a/contact-me.html
+++ b/contact-me.html
@@ -30,5 +30,10 @@
 <button>Send this way</button>
 </form>
 </body>
-
+<hr>  
+<a href=".\index.html">
+    <button>
+    RETURN TO THE MAIN PAGE
+    </button>
+<hr>  
 </html>
