--- a/languages.html
+++ b/languages.html
@@ -17,4 +17,9 @@
 <li>Baku English Language learning Volunteering in ADA</li>
 </ol>
 <a href=""></a>
-<hr>
+<hr>  
+<a href=".\index.html">
+    <button>
+    RETURN TO THE MAIN PAGE
+    </button>
+<hr>  
