--- a/schedule.html
+++ b/schedule.html
@@ -102,5 +102,13 @@ body {background-color: rgb(0, 0, 0);}
 </table>
 
 </body>
+
+<hr>  
+<a href=".\index.html">
+    <button>
+    RETURN TO THE MAIN PAGE
+    </button>
+<hr>  
+
 </html>
 
