--- a/skills.html
+++ b/skills.html
@@ -1,4 +1,5 @@
-  <br>  <hr>
+<!DOCTYPE html> 
+<hr>
 <style>
     body {background-color: rgb(0, 0, 0);}
     h1   {color: GREEN;}
@@ -34,4 +35,11 @@
        <li>Ability to Work in the Team</li>
 </li>
    </ol>
-<hr>  <br> 
+<hr>  
+<a href=".\index.html">
+    <button>
+    RETURN TO THE MAIN PAGE
+    </button>
+<hr>  
+ 
+</html>
